[package]
name = "waffles"
version = "0.1.0"
authors = ["Graeme Lawton <graeme@la.wton.email>", "Mark Ellis <m@rkellis.com>"]

[dependencies]
log = "0.3"
pretty_env_logger = "0.1"
config = "0.7"
error-chain = "0.11"
hyper = "0.11"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-tls = "0.1"
futures = "0.1"
clippy = { version = "0.0", optional = true }
native-tls = "0.1"

[dev-dependencies]
reqwest = "0.7"

